test_data/Xml/Unexpected/Unserializable/InvalidClassName/langStringTextType/wrong.xml.exception
Expected an element representing an instance of class LangStringTextType with element name langStringTextType, but got: utterlyInvalid at: the beginning